# rust_small_rocksdb

./: BUILD_AUTOMATION.md  BUILD_ROCKSDB.md  COLUMN_FAMILIES.md  Cargo.toml  LICENSE-MIT  README.md  USAGE_GUIDE.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: build-rocksdb-advanced.yml  build-rocksdb.yml
examples/: basic.rs  column_family_demo.rs  must_use_demo.rs  size_assertion_demo.rs
scripts/: build-rocksdb.sh
src/: db.rs  error.rs  ffi.rs  iterator.rs  lib.rs  options.rs
tests/: column_family_tests.rs  integration_tests.rs
